# IntersectProject

./: CMakeLists.txt  README.md
src/: Line.cpp  Line.h  main.cpp
test/: line_intersect_test.cpp  test.cpp
